#780 Java 9 migration. Contains the following changes:
* Added compiler and runtime arguments to build file necessary to run the project
* Controls are Java 9 compatible except GridView and SpreedSheetView
* Used reflection to access restricted fields and methods.
* Updated gradle to 4.0.0
* Few parts of the code are commented so as to compile and run the project. All commented code that needs author's advice has a comment "FIXME: JDK-9" for faster access.